# gilt-se-rpc-api

./: CMakeLists.txt  README.md  SEClient.cpp
protos/: management.proto
src/: DataIOAPI.h  SEClient.h  Serialization.h
